UPD: fix footer/owerall-wrap/page style

--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -13,6 +13,7 @@ body {
 }
 div#page {
     padding-top: 50px;
+    padding-bottom: 20px;
 }
 
 #page [class*='icon-'] {
@@ -30,6 +31,7 @@ div#page {
 
 #overall-wrap {
     min-height: 100%;
+    margin: 0 auto -141px;
 }
 .navbar-fixed-top {
     border-bottom: 5px solid #FF9600;
@@ -42,8 +44,6 @@ footer {
     height: 75px;
     padding: 20px 0px 45px;
 
-    position: relative;
-    margin-top: -85px;
     border-top: 1px solid #E5E5E5;
 
     line-height: 18px;
